src/app/globals.css
body {
  background-color: rgb(53, 53, 53);
  position: relative;

  color: #ffffff;

  overflow-x: hidden;

  min-height: 100vh;

  --logo-size: 100px;

  --black: #1f1a17;
}

body::before {
  width: 150%;
  height: 2500px;
  left: 50%;

  position: absolute;
  content: "";

  background-image: url("/images/map.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  transform: translate(-50%, -425px);

  z-index: -1;

  opacity: 0.4;

  overflow: hidden;
}

@font-face {
  font-family: "Frutiger";
  src: url("/Frutiger.ttf");
}

@font-face {
  font-family: "Frutiger Bold";
  src: url("/Frutiger_bold.ttf");
}

.content {
  display: flex;
  justify-items: center;
  align-items: center;
  flex-direction: column;
  gap: 30px;

  max-width: 800px;
  margin: auto;
  margin-top: 50px;

  font-family: Frutiger, sans-serif;
}

.title {
  font-size: 38px;
  background-color: black;
  color: white;
  text-decoration: none;

  width: 600px;
  height: var(--logo-size);

  display: flex;
  justify-content: space-between;
  align-items: center;

  font-family: Frutiger Bold, sans-serif;
}

.title .logo img {
  height: var(--logo-size);
}

.logo img {
  display: block;
}

.description {
  font-size: 18px;
  text-align: center;
}

.join {
  font-size: 20px;
  text-decoration: none;
  border-radius: 15px;
  padding: 15px 25px;

  background-color: #06005d;
  color: white;

  width: fit-content;

  cursor: pointer;
}

.join:hover {
  background-color: #060061;
}

.webring {
  width: 400px;

  background-color: black;

  border: 2px solid #fff;
}

.webring-title {
  font-family: Frutiger Bold, sans-serif;
  font-size: 30px;
  
  display: flex;
  justify-content: center;
  align-items: center;

  padding: 20px;

  border-bottom: 2px solid #fff;
}

.webring-contents {
  padding-top: 20px;
  display: flex;
  justify-content: center;
}

.webring-contents-inner {
  position: relative;
  width: 70%;
}

.station-dot {
  vertical-align: middle;
  width: 10px;
}

.station-logo {
  vertical-align: middle;
  width: 16px;
}

.linkmap-top {
  margin-bottom: 50px;

  z-index: 1;
  position: relative;
}

.line-outer {
  position: relative;
}

.line {
  --line-width: 6px;

  position: absolute;
  left: calc(5px - var(--line-width) / 2);
  top: 10px;
  bottom: 60px;
  width: var(--line-width);
  background-color: #c00;
  
  z-index: 0;
}

.webring-contents .arrow-down {
  position: absolute;

  --arrow-size: 15px;
  left: calc(0px - var(--arrow-size));
  height: var(--arrow-size);
  top: 3px;
}

.linkmap-text {
  display: inline-block;
  margin-left: 5px;

  padding: 2px;

  font-size: 16px;
  line-height: 16px;

  padding-top: 3px;
  padding-bottom: 1px;
}

.linkmap-text a {
  color: white;
  text-decoration: none;
}

.linkmap-text.start-station a {
  color: black;
}

.linkmap-text.start-station {
  font-weight: bold;
  color: black;
  background-color: white;
}

.linkmap-text.start-station::before {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  
  border-right: 6px solid white;

  left: 13.4px;
  top: 0px;
}

.socials img {
  height: 30px;

  padding-left: 10px;
  padding-right: 10px;
}

.text-block {
  background-color: black;
  font-size: 18px;

  padding: 30px;

  border: 2px solid #fff;
}

.text-block-indented {
  padding-left: 50px;
  padding-right: 50px;

  margin: 1em 0;
}

.text-block p:not(.info-bar, .project-list p, .blog *) {
  padding-left: 55px;
  padding-right: 55px;
}

.blog {
  padding-top: 10px;

  font-size: 1rem;
  line-height: 1.4rem;

  font-family: Arial, Helvetica, sans-serif;
}

.blog a {
  color: white;
}

.blog-thumbnail {
  width: 100%;
  margin-top: 10px;
  margin-bottom: 0px;
}

.date {
  text-align: center;
}

.text-block :first-child {
  margin-top: 0;
}

.text-block :last-child {
  margin-bottom: 0;
}

.info-icon {
  width: 35px;

  padding-right: 20px;
}

.info-bar {
  display: flex;
  align-items: center;
}

.info-bar-title {
  font-size: 28px;
}

.footer {
  text-align: center;
}

.footer a {
  color: white;
}

.footer div {
  margin: 5px;
}

.project-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 10px;
}

.project-list div {
  flex: 40%;
}

.project-title {
  font-weight: bold;
  font-size: 23px;

  text-align: center;
}

.project-list a {
  color: white;
}

.project-actions-title {
  font-size: 20px;
  font-weight: bold;
}

.project-image {
  width: 100%;
}

@media only screen and (max-width: 700px) {
  body {
      --logo-size: 60px;
  }

  .title {
      width: 300px;
      font-size: 22px;
      height: var(--logo-size);
  }

  .webring {
    width: 350px;
  }
  
  .text-block-indented {
    padding-right: 0;
  }

  .text-block p:not(.info-bar) {
    padding-right: 0;
  }

  .webring-contents-inner {
    width: 72%;
  }

  .webring-title {
    font-size: 22px;
  }

  .project-list div {
    flex: 100%;
  }
}

